--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             /* background-color: lightcoral; */
             background-size: cover;
             border: none;
-            background-image: url('/img/bag-1.jpg');
+            background-image: url("img/bag-1.jpg");
         }
 
 
